objects/SFDC_Industry_Mapping_Section__mdt.object
<CustomObject>
    <description>Contains groupings of mappings for display within an Assessment.</description>
    <fields>
        <fullName>Controlling_Question__c</fullName>
        <description>The question which prompts this section to display after it gets answered</description>
        <inlineHelpText>The question which prompts this section to display after it gets answered</inlineHelpText>
        <label>Controlling Question</label>
        <referenceTo>SFDC_Industry_Assessment_Question__mdt</referenceTo>
        <relationshipLabel>SFDC Industry Mapping Sections</relationshipLabel>
        <relationshipName>SFDC_Industry_Mapping_Sections</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>An introductory paragraph to display to the end-user when viewing this section.</description>
        <inlineHelpText>An introductory paragraph to display to the end-user when viewing this section.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Triggering_Answer__c</fullName>
        <description>If populated, indicates that the answer that triggers this particular mapping section.</description>
        <inlineHelpText>If populated, indicates that the answer that triggers this particular mapping section.</inlineHelpText>
        <label>Triggering Answer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>SFDC Industry Mapping Section</label>
    <listViews>
        <fullName>All_Sections</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Controlling_Question__c</columns>
        <columns>Description__c</columns>
        <columns>Triggering_Answer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Sections</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SFDC Industry Mapping Sections</pluralLabel>
</CustomObject>